# PiHydroWave

./: .clang-format  .gitmodules  CMakeLists.txt  config.json  genver.sh
cmake/: pi-chain.cmake
frontend/HydroFrontend/: README.md  angular.json  package-lock.json  package.json
frontend/HydroFrontend/src/: index.html  styles.css
frontend/HydroFrontend/src/app/: app.css  app.html  app.spec.ts  app.ts
include/: Application.hpp  ArgParser.hpp  BackRestController.hpp  BackWebSocket.hpp  BbNames.hpp  CMakeLists.txt  DrogonApp.hpp  HttpFilter.hpp  LampController.hpp  MicroDeviceHub.hpp  PumpController.hpp  RadioHandler.hpp  SerialEspProxy.hpp  SettingsManager.hpp  uDevice.hpp
include/core/: Blackboard.hpp  BlackboardEntry.hpp  EventBus.hpp  FieldValidators.hpp  Helpers.hpp  InterfaceList.hpp  Logger.hpp  MonitorEntry.hpp  RadioTypes.hpp  TimeWrapper.hpp  Types.hpp  Version.hpp
include/drivers/: SerialDriver.hpp
include/logger/: DBLogger.hpp  Logger.hpp  SystemLogger.hpp  WebSocketLogger.hpp
include/storage/: Database.hpp  DatabaseEntry.hpp  LoggingEntry.hpp
sources/: CMakeLists.txt  LampController.cpp  PumpController.cpp  RadioHandler.cpp  SettingsManager.cpp  main.cpp
sources/core/: Logger.cpp
sources/logger/: DBLogger.cpp  Logger.cpp  SystemLogger.cpp  WebSocketLogger.cpp
sources/storage/: Database.cpp
test/: test.cpp
